// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Matches Signup Snapshot 1`] = `
<div
  data-testid="signup"
>
  <div
    className="no__border left__pad card"
  >
    <div
      className="w__90 card-body"
    >
      <h2
        className="text-center mb-4"
      >
        Sign Up
      </h2>
      <form
        className=""
        onSubmit={[Function]}
      >
        <div
          className="form-group"
          id="name"
        >
          <label
            className="form-label"
          >
            Name
          </label>
          <input
            className="form-control"
            onChange={[Function]}
            placeholder="John Doe"
            required={true}
            type="text"
            value=""
          />
        </div>
        <div
          className="form-group"
          id="email"
        >
          <label
            className="form-label"
          >
            Email
          </label>
          <input
            className="form-control"
            onChange={[Function]}
            placeholder="john@xyz.com"
            required={true}
            value=""
          />
        </div>
        <div
          className="form-group"
          id="password"
        >
          <label
            className="form-label"
          >
            Password
          </label>
          <input
            className="form-control"
            onChange={[Function]}
            required={true}
            type="password"
            value=""
          />
        </div>
        <button
          className="w-100 button__color btn btn-primary"
          disabled={false}
          type="submit"
        >
          Sign Up
        </button>
        <div
          className="text-center"
        >
          <p>
            Already have an account?
             
            <a
              href="/"
            >
              Sign In
            </a>
          </p>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Matches Snapshot 1`] = `
<div
  className="no__border left__pad card"
>
  <div
    className="w__90 card-body"
  >
    <h2
      className="text-center mb-4"
    >
      Sign Up
    </h2>
    <form
      className=""
      onSubmit={[Function]}
    >
      <div
        className="form-group"
        id="name"
      >
        <label
          className="form-label"
        >
          Name
        </label>
        <input
          className="form-control"
          onChange={[Function]}
          placeholder="John Doe"
          required={true}
          type="text"
          value=""
        />
      </div>
      <div
        className="form-group"
        id="email"
      >
        <label
          className="form-label"
        >
          Email
        </label>
        <input
          className="form-control"
          onChange={[Function]}
          placeholder="john@xyz.com"
          required={true}
          value=""
        />
      </div>
      <div
        className="form-group"
        id="password"
      >
        <label
          className="form-label"
        >
          Password
        </label>
        <input
          className="form-control"
          onChange={[Function]}
          required={true}
          type="password"
          value=""
        />
      </div>
      <button
        className="w-100 button__color btn btn-primary"
        disabled={false}
        type="submit"
      >
        Sign Up
      </button>
      <div
        className="text-center"
      >
        <p>
          Already have an account?
           
          <a
            href="/"
          >
            Sign In
          </a>
        </p>
      </div>
    </form>
  </div>
</div>
`;
